# CleanKnit

./: LICENSE  README.md  geopoly_example.html  nyc_open_data.ipynb  pagespec.xsl  pyproject.toml  python_demo.py  setup.cfg  socrata_views.sql  sqlalchemy_attach_demo.py  test_qt.py
notebooks/: nyc_open_data.ipynb
src/cleanknit/: munge.py
src/cleanknit/cli/: soc.py
src/cleanknit/resources/: compile_sqlite.sh  fontspec.xsl  json_processing_demo.sql  pdf2xml.dtd  profiling_codegen_query.sql  resource_queries.sql  socrata2curl.sh  socrata_ddl.sql  socrata_domains.json  socrata_vsv_map.sql  textbox.xsl  upsert_socrata_resource.sql
src/cleanknit/socrata/: model.py  python_demo.py
tests/: pdf_test.py  test_cmd2.py  test_qt_tabbed.py
