
[metadata]
name = CleanKnit_phrrngtn
version = 0.0.1
author = Paul Harrington
author_email = pjj.harrington@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CadenceOneFive/CleanKnit
project_urls =
    Bug Tracker = https://github.com/CadenceOneFive/CleanKnit/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
